--- a/examples/todo/static/styles/list.css
+++ b/examples/todo/static/styles/list.css
@@ -207,3 +207,11 @@
 .action-btn.delete:hover {
   background-color: #f8d7da;
 }
+
+.edit-input {
+  font-size: 1.1rem;
+  padding: 0.3rem;
+  width: 100%;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
